# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/ets_runtime/js_runtime_config.gni")
import("//arkcompiler/ets_runtime/test/test_helper.gni")

test_js_path = "//arkcompiler/ets_runtime/ecmascript/napi/test/js/"

test_js_files = [
  "termination_1",
  "termination_2",
  "termination_3",
  "termination",
]

foreach(file, test_js_files) {
  es2abc_gen_abc("gen_${file}_abc") {
    test_js = "${test_js_path}${file}.js"
    test_abc = "$target_out_dir/${file}.abc"

    # Only targets in this file can depend on this.
    extra_visibility = [ ":*" ]
    src_js = rebase_path(test_js)
    dst_file = rebase_path(test_abc)
    extra_args = []
    extra_args += [ "--module" ]
    extra_args += [ "--merge-abc" ]
    in_puts = [ test_js ]
    out_puts = [ test_abc ]
  }
}

module_output_path = "arkcompiler/ets_runtime"

host_unittest_action("JsnapiTest") {
  module_out_path = module_output_path

  sources = [
    # test file
    "dfx_jsnapi_tests.cpp",
    "jsnapi_tests.cpp",
  ]

  configs = [ "//arkcompiler/ets_runtime:ecma_test_config" ]

  deps = [
    "$ark_third_party_root/icu/icu4c:shared_icui18n",
    "$ark_third_party_root/icu/icu4c:shared_icuuc",
    "//arkcompiler/ets_runtime:libark_jsruntime_test",
    sdk_libc_secshared_dep,
  ]

  foreach(file, test_js_files) {
    deps += [ ":gen_${file}_abc" ]
  }

  # hiviewdfx libraries
  external_deps = hiviewdfx_ext_deps
  deps += hiviewdfx_deps
}

host_unittest_action("FFIWorkLoadTest") {
  module_out_path = module_output_path

  sources = [
    # test file
    "ffi_workload.cpp",
  ]

  configs = [ "$js_root:ecma_test_config" ]

  deps = [
    "$ark_third_party_root/icu/icu4c:shared_icui18n",
    "$ark_third_party_root/icu/icu4c:shared_icuuc",
    "$js_root:libark_jsruntime_test",
    sdk_libc_secshared_dep,
  ]

  # hiviewdfx libraries
  external_deps = hiviewdfx_ext_deps
  deps += hiviewdfx_deps
}

group("unittest") {
  testonly = true
  deps = [ ":JsnapiTest" ]
}

group("host_unittest") {
  testonly = true
  deps = [
    ":Jsnapi_001_TestAction",
    ":Jsnapi_002_TestAction",
    ":Jsnapi_003_TestAction",
    ":Jsnapi_004_TestAction",
  ]

  if (is_mac) {
    deps -= [
      ":Jsnapi_001_TestAction",
      ":Jsnapi_002_TestAction",
      ":Jsnapi_003_TestAction",
      ":Jsnapi_004_TestAction",
    ]
  }
}

group("workload_test") {
  testonly = true
  deps = [ ":FFIWorkLoadTest" ]
}
