# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("ark_aot_builtin_inlining_test") {
  testonly = true
  deps = [
    "bigint:ark_aot_builtin_inlining_bigint_test",
    "date:ark_aot_builtin_inlining_date_test",
    "global:ark_aot_builtin_inlining_global_test",
    "map:ark_aot_builtin_inlining_map_test",
    "math:ark_aot_builtin_inlining_math_test",
    "number:ark_aot_builtin_inlining_number_test",
    "set:ark_aot_builtin_inlining_set_test",
    "typedarray:ark_aot_builtin_inlining_typedarray_test",
  ]
}
